# manticore

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.crates-io-staging/: Cargo.toml  README.crates-io.md  README.md
.crates-io-staging/src/: lib.rs
.github/: CODEOWNERS
.github/workflows/: fuzz.yml  license.yml  rust.yml
cerberus-tables/: Cargo.toml  README.md
cerberus-tables/src/: main.rs
cerberus-tables/src/ast/: fmt.rs  mod.rs  parser.rs
e2e/: Cargo.toml  README.md  run.sh
e2e/src/: device_info.rs  fakes.rs  harness.rs  main.rs  pa_rot.rs  tcp.rs
e2e/src/support/: mod.rs  rot.rs  tcp.rs
e2e/src/tests/: challenge.rs  device_queries.rs  spdm_device_queries.rs
example/: firmware_version_request.json  fpm.json
fuzz/: Cargo.toml  README.md  generate_proto_fuzz.py  proto_types.txt  rust-toolchain.toml
fuzz/fuzz_targets/: device_capabilities_request_deserialize.rs  device_capabilities_request_from_wire.rs  device_capabilities_request_serialize.rs  device_capabilities_request_to_wire.rs  device_capabilities_response_deserialize.rs  device_capabilities_response_from_wire.rs  device_capabilities_response_serialize.rs  device_capabilities_response_to_wire.rs  device_id_request_deserialize.rs  device_id_request_from_wire.rs  device_id_request_serialize.rs  device_id_request_to_wire.rs  device_id_response_deserialize.rs  device_id_response_from_wire.rs  device_id_response_serialize.rs  device_id_response_to_wire.rs  device_info_request_deserialize.rs  device_info_request_from_wire.rs  device_info_request_serialize.rs  device_info_request_to_wire.rs  device_info_response_deserialize.rs  device_info_response_from_wire.rs  device_info_response_serialize.rs  device_info_response_to_wire.rs  device_uptime_request_deserialize.rs  device_uptime_request_from_wire.rs  device_uptime_request_serialize.rs  device_uptime_request_to_wire.rs  device_uptime_response_deserialize.rs  device_uptime_response_from_wire.rs  device_uptime_response_serialize.rs  device_uptime_response_to_wire.rs  firmware_version_request_deserialize.rs  firmware_version_request_from_wire.rs  firmware_version_request_serialize.rs  firmware_version_request_to_wire.rs  firmware_version_response_deserialize.rs  firmware_version_response_from_wire.rs  firmware_version_response_serialize.rs  firmware_version_response_to_wire.rs  (+17 more)
fuzz/targets/: x509_signed.rs  x509_unsigned.rs
fuzz/templates/: fuzz_job.yml.tpl  req_from_wire.rs.tpl  req_to_wire.rs.tpl  resp_from_wire.rs.tpl  resp_to_wire.rs.tpl  target.toml.tpl
src/: debug.rs  hardware.rs  io.rs  lib.rs  main.rs  mem.rs  net.rs  self_update.rs  serde.rs
src/cert/: cbor.rs  cbor_macro.rs  cbor_test.rs  chain.rs  cwt.rs  cwt_test.rs  der.rs  der_test.rs  mod.rs  x509.rs  x509_test.rs
src/cert/cwt/: mod.rs  test.rs
src/cert/testdata/: bits_overflow.der  bits_partial.der  bits_partial_bad.der  bits_total.der  forty_two.der  generate.sh  huge_int.der  indefinite_any.der  long_form_tag.der  mod.rs  x509_bad_ca_without_cert_sign.tbs  x509_bad_cert_sign_with_other_use.tbs  x509_bad_cert_sign_without_bc.tbs  x509_bad_different_sig_alg.tbs  x509_bad_missing_extns.tbs  x509_bad_missing_issuer.tbs  x509_bad_missing_rsa_null.tbs  x509_bad_missing_serial.tbs  x509_bad_missing_sig_alg.tbs  x509_bad_missing_spki.tbs  x509_bad_missing_spki_rsa_modulus.tbs  x509_bad_missing_subject.tbs  x509_bad_missing_validty.tbs  x509_bad_missing_version.tbs  x509_bad_serial_too_long.tbs  x509_bad_unknown_critical.tbs  x509_bad_wrong_version.tbs  x509_ok_no_ca_without_bc.tbs  x509_ok_unknown_default_criticality.tbs  x509_ok_unknown_noncritical.tbs  x509_self_signed.tbs  x509_sub_signed.tbs  zero.der
src/cert/x509/: mod.rs  test.rs
src/crypto/: csrng.rs  hash.rs  mod.rs  ring.rs  rsa.rs  sha256.rs  sig.rs
src/hardware/: flash.rs  mod.rs
src/io/: bit_buf.rs  cursor.rs  endian.rs  mod.rs  read.rs  write.rs
src/manifest/: container.rs  fpm.rs  generic.rs  manager.rs  mod.rs  pcd.rs  pfm.rs
src/mem/: arena.rs  cow.rs  mod.rs  ref_wrapper.rs  ref_wrapper_cow.rs  self_ref.rs
src/net/: device.rs  host.rs  mod.rs
src/protocol/: borrowed.rs  capabilities.rs  challenge.rs  device_id.rs  device_info.rs  device_uptime.rs  error.rs  firmware_version.rs  get_cert.rs  get_digests.rs  get_host_state.rs  key_exchange.rs  macros.rs  message.rs.tpl  mod.rs  new_message.py  request_counter.rs  reset_counter.rs  template.rs  test_util.rs  wire.rs
src/server/: ac_rot.rs  handler.rs  mod.rs  options.rs  pa_rot.rs  response.rs  rot.rs
src/session/: mod.rs  ring.rs
testutil/: Cargo.toml  README.md  regenerate-testdata.sh
testutil/src/: lib.rs
testutil/src/data/: der.rs  keys.rs  misc_crypto.rs  mod.rs  x509.rs
testutil/src/data/der/: bad_bool.der  double_zero.der  false.der  long_form_any.der  negative.der  nine_thousand.der  nonempty_null.der  null.der  one_twenty_eight.der  short_form_any.der  true.der
testutil/src/data/keys/: key1.ecdsa-p256.pk8  key1.ecdsa-p256.pub.pk8  key2.rsa.pk8  key3.rsa.pk8  key3.rsa.pub.pk8
testutil/src/data/x509/: bad_ca_without_cert_sign.tbs  bad_cert_sign_with_other_use.tbs  bad_cert_sign_without_bc.tbs  bad_different_sig_alg.tbs  bad_missing_extns.tbs  bad_missing_issuer.tbs  bad_missing_rsa_null.tbs  bad_missing_serial.tbs  bad_missing_sig_alg.tbs  bad_missing_spki.tbs  bad_missing_spki_rsa_modulus.tbs  bad_missing_subject.tbs  bad_missing_validty.tbs  bad_missing_version.tbs  bad_serial_too_long.tbs  bad_unknown_critical.tbs  bad_wrong_version.tbs  chain1.tbs  chain2.tbs  chain3.tbs  ok_no_ca_without_bc.tbs  ok_unknown_default_criticality.tbs  ok_unknown_noncritical.tbs  self_signed.tbs  sub_signed.tbs
tool/: Cargo.toml
tool/examples/: firmware_version_response.json  pfm.json
tool/src/: main.rs  manifest.rs  message.rs  util.rs
util/: deserialize.rs.template  from_wire.rs.template  from_wire.rs.tpl  fuzz_job.yml.template  license-checker.hjson  new_protocol_target.py  serialize.rs.template  serialize_fuzz_safe.rs.template  to_wire.rs.template  to_wire.rs.tpl  to_wire_fuzz_safe.rs.template
(+68 files in other folders)
