# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore"
version = "0.1.0"
authors = ["lowRISC Contributors"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
bitflags = "1.2.1"
byteorder = "1.3.4"
zerocopy = "0.3.0"

libfuzzer-sys = { version = "0.3", optional = true }

[dev-dependencies]
ring = "0.16.11"

[features]
# Enables deriving `arbitrary::Arbitrary` for various manticore types.
arbitrary-derive = ["libfuzzer-sys"]
