# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore"
version = "0.0.1"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "A WIP implementation of the Cerberus attestation protocol"

[dependencies]
arrayvec = "0.5.1"
bitflags = "1.2.1"
byteorder = "1.3.4"
static_assertions = "1.1.0"
zerocopy = "0.3.0"

[dependencies.libfuzzer-sys]
version = "0.3"
optional = true
features = ["arbitrary-derive"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[dev-dependencies]
ring = "0.16.11"

[features]
# Enables deriving `arbitrary::Arbitrary` for various manticore types.
arbitrary-derive = ["libfuzzer-sys"]
