# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore"
version = "0.0.1"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "A WIP implementation of the Cerberus attestation protocol"

[workspace]
members = [".", "e2e", "tool"]

[dependencies]
arrayvec = { version = "0.5.1", default_features = false }
bitflags = "1.2.1"
byteorder = { version = "1.3.4", default_features = false }
static_assertions = "1.1.0"
zerocopy = "0.3.0"

[dependencies.libfuzzer-sys]
version = "0.3"
optional = true
features = ["arbitrary-derive"]

[dependencies.ring]
version = "0.16.11"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[dev-dependencies]
pretty_assertions = "0.6.1"
ring = "0.16.11"
serde_json = "1.0"

[features]
default = ["std", "ring"]

# Enables deriving `arbitrary::Arbitrary` for various manticore types.
arbitrary-derive = ["libfuzzer-sys", "std"]

# Enables features that requires the full standard library.
std = [
  "arrayvec/std",
  "byteorder/std",
  "serde/std",
  "ring/std",
]

# Enables allocation injection, which makes it possible to replace borrowed
# content with allocated content in some places.
inject-alloc = ["std"]

[lib]
name = "manticore"
path = "src/lib.rs"
