# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore"
version = "0.0.1"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "A WIP implementation of the Cerberus attestation protocol"

readme = "README.crates-io.md"
include = ["Cargo.toml", "src/lib.rs", "README.cargo-io.md"]
