# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cerberus-tables"
version = "0.0.1"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "A parser for the Cerberus Message Table format."

[dependencies]
annotate-snippets = "0.9.1"
structopt = "0.3.16"
