# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore-e2e"
version = "0.0.0"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "End-to-end tests for Manticore"

[dependencies]
manticore = { path = ".." }
structopt = "0.3.16"
serde_json = "1.0"
