# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "e2e"
version = "0.0.0"
edition = "2018"
publish = false

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "End-to-end tests for Manticore"

[dependencies]
manticore = { path = ".." }
testutil = { path = "../testutil" }

env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.16"
