# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore-fuzz"
version = "0.0.0"
authors = ["lowRISC Contributors"]
license = "Apache-2.0"
edition = "2018"

# Never publish this "crate" to crates.io.
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.libfuzzer-sys]
version = "0.3"
features = ["arbitrary-derive"]

[dependencies.manticore]
path = ".."
features = ["arbitrary-derive"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "x509_signed"
path = "targets/x509_signed.rs"

[[bin]]
name = "x509_unsigned"
path = "targets/x509_unsigned.rs"

# Anything below this line will be blown away by `generate_proto_fuzz.py`.
## BEGIN GENERATED TARGETS
[[bin]]
name = "manticore_protocol_capabilities_DeviceCapabilities__req_to_wire"
path = "gen/manticore_protocol_capabilities_DeviceCapabilities__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_capabilities_DeviceCapabilities__req_from_wire"
path = "gen/manticore_protocol_capabilities_DeviceCapabilities__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_capabilities_DeviceCapabilities__resp_from_wire"
path = "gen/manticore_protocol_capabilities_DeviceCapabilities__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_capabilities_DeviceCapabilities__resp_to_wire"
path = "gen/manticore_protocol_capabilities_DeviceCapabilities__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_id_DeviceId__req_to_wire"
path = "gen/manticore_protocol_device_id_DeviceId__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_id_DeviceId__req_from_wire"
path = "gen/manticore_protocol_device_id_DeviceId__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_id_DeviceId__resp_from_wire"
path = "gen/manticore_protocol_device_id_DeviceId__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_id_DeviceId__resp_to_wire"
path = "gen/manticore_protocol_device_id_DeviceId__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_info_DeviceInfo__req_to_wire"
path = "gen/manticore_protocol_device_info_DeviceInfo__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_info_DeviceInfo__req_from_wire"
path = "gen/manticore_protocol_device_info_DeviceInfo__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_info_DeviceInfo__resp_from_wire"
path = "gen/manticore_protocol_device_info_DeviceInfo__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_info_DeviceInfo__resp_to_wire"
path = "gen/manticore_protocol_device_info_DeviceInfo__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_uptime_DeviceUptime__req_to_wire"
path = "gen/manticore_protocol_device_uptime_DeviceUptime__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_device_uptime_DeviceUptime__req_from_wire"
path = "gen/manticore_protocol_device_uptime_DeviceUptime__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_uptime_DeviceUptime__resp_from_wire"
path = "gen/manticore_protocol_device_uptime_DeviceUptime__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_device_uptime_DeviceUptime__resp_to_wire"
path = "gen/manticore_protocol_device_uptime_DeviceUptime__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_get_digests_GetDigests__req_to_wire"
path = "gen/manticore_protocol_get_digests_GetDigests__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_get_digests_GetDigests__req_from_wire"
path = "gen/manticore_protocol_get_digests_GetDigests__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_get_digests_GetDigests__resp_from_wire"
path = "gen/manticore_protocol_get_digests_GetDigests__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_get_digests_GetDigests__resp_to_wire"
path = "gen/manticore_protocol_get_digests_GetDigests__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_get_cert_GetCert__req_to_wire"
path = "gen/manticore_protocol_get_cert_GetCert__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_get_cert_GetCert__req_from_wire"
path = "gen/manticore_protocol_get_cert_GetCert__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_get_cert_GetCert__resp_from_wire"
path = "gen/manticore_protocol_get_cert_GetCert__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_get_cert_GetCert__resp_to_wire"
path = "gen/manticore_protocol_get_cert_GetCert__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_firmware_version_FirmwareVersion__req_to_wire"
path = "gen/manticore_protocol_firmware_version_FirmwareVersion__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_firmware_version_FirmwareVersion__req_from_wire"
path = "gen/manticore_protocol_firmware_version_FirmwareVersion__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_firmware_version_FirmwareVersion__resp_from_wire"
path = "gen/manticore_protocol_firmware_version_FirmwareVersion__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_firmware_version_FirmwareVersion__resp_to_wire"
path = "gen/manticore_protocol_firmware_version_FirmwareVersion__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_request_counter_RequestCounter__req_to_wire"
path = "gen/manticore_protocol_request_counter_RequestCounter__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_request_counter_RequestCounter__req_from_wire"
path = "gen/manticore_protocol_request_counter_RequestCounter__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_request_counter_RequestCounter__resp_from_wire"
path = "gen/manticore_protocol_request_counter_RequestCounter__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_request_counter_RequestCounter__resp_to_wire"
path = "gen/manticore_protocol_request_counter_RequestCounter__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_reset_counter_ResetCounter__req_to_wire"
path = "gen/manticore_protocol_reset_counter_ResetCounter__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_reset_counter_ResetCounter__req_from_wire"
path = "gen/manticore_protocol_reset_counter_ResetCounter__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_reset_counter_ResetCounter__resp_from_wire"
path = "gen/manticore_protocol_reset_counter_ResetCounter__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_reset_counter_ResetCounter__resp_to_wire"
path = "gen/manticore_protocol_reset_counter_ResetCounter__resp_to_wire.rs"

