# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore-fuzz"
version = "0.0.0"
authors = ["lowRISC Contributors"]
license = "Apache-2.0"
edition = "2018"

# Never publish this "crate" to crates.io.
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.libfuzzer-sys]
version = "0.3"
features = ["arbitrary-derive"]

[dependencies.manticore]
path = ".."
features = ["arbitrary-derive"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "x509_signed"
path = "targets/x509_signed.rs"

[[bin]]
name = "x509_unsigned"
path = "targets/x509_unsigned.rs"

# Anything below this line will be blown away by `generate_proto_fuzz.py`.
## BEGIN GENERATED TARGETS
[[bin]]
name = "manticore_protocol_cerberus_Challenge__req_to_wire"
path = "gen/manticore_protocol_cerberus_Challenge__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_Challenge__req_from_wire"
path = "gen/manticore_protocol_cerberus_Challenge__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_Challenge__resp_from_wire"
path = "gen/manticore_protocol_cerberus_Challenge__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_Challenge__resp_to_wire"
path = "gen/manticore_protocol_cerberus_Challenge__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceCapabilities__req_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceCapabilities__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceCapabilities__req_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceCapabilities__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceCapabilities__resp_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceCapabilities__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceCapabilities__resp_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceCapabilities__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceId__req_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceId__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceId__req_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceId__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceId__resp_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceId__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceId__resp_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceId__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceInfo__req_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceInfo__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceInfo__req_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceInfo__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceInfo__resp_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceInfo__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceInfo__resp_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceInfo__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceUptime__req_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceUptime__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceUptime__req_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceUptime__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceUptime__resp_from_wire"
path = "gen/manticore_protocol_cerberus_DeviceUptime__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_DeviceUptime__resp_to_wire"
path = "gen/manticore_protocol_cerberus_DeviceUptime__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetDigests__req_to_wire"
path = "gen/manticore_protocol_cerberus_GetDigests__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetDigests__req_from_wire"
path = "gen/manticore_protocol_cerberus_GetDigests__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetDigests__resp_from_wire"
path = "gen/manticore_protocol_cerberus_GetDigests__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetDigests__resp_to_wire"
path = "gen/manticore_protocol_cerberus_GetDigests__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetCert__req_to_wire"
path = "gen/manticore_protocol_cerberus_GetCert__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetCert__req_from_wire"
path = "gen/manticore_protocol_cerberus_GetCert__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetCert__resp_from_wire"
path = "gen/manticore_protocol_cerberus_GetCert__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetCert__resp_to_wire"
path = "gen/manticore_protocol_cerberus_GetCert__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetHostState__req_to_wire"
path = "gen/manticore_protocol_cerberus_GetHostState__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetHostState__req_from_wire"
path = "gen/manticore_protocol_cerberus_GetHostState__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetHostState__resp_from_wire"
path = "gen/manticore_protocol_cerberus_GetHostState__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_GetHostState__resp_to_wire"
path = "gen/manticore_protocol_cerberus_GetHostState__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_FirmwareVersion__req_to_wire"
path = "gen/manticore_protocol_cerberus_FirmwareVersion__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_FirmwareVersion__req_from_wire"
path = "gen/manticore_protocol_cerberus_FirmwareVersion__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_FirmwareVersion__resp_from_wire"
path = "gen/manticore_protocol_cerberus_FirmwareVersion__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_FirmwareVersion__resp_to_wire"
path = "gen/manticore_protocol_cerberus_FirmwareVersion__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_KeyExchange__req_to_wire"
path = "gen/manticore_protocol_cerberus_KeyExchange__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_KeyExchange__req_from_wire"
path = "gen/manticore_protocol_cerberus_KeyExchange__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_KeyExchange__resp_from_wire"
path = "gen/manticore_protocol_cerberus_KeyExchange__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_KeyExchange__resp_to_wire"
path = "gen/manticore_protocol_cerberus_KeyExchange__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_RequestCounter__req_to_wire"
path = "gen/manticore_protocol_cerberus_RequestCounter__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_RequestCounter__req_from_wire"
path = "gen/manticore_protocol_cerberus_RequestCounter__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_RequestCounter__resp_from_wire"
path = "gen/manticore_protocol_cerberus_RequestCounter__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_RequestCounter__resp_to_wire"
path = "gen/manticore_protocol_cerberus_RequestCounter__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_ResetCounter__req_to_wire"
path = "gen/manticore_protocol_cerberus_ResetCounter__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_ResetCounter__req_from_wire"
path = "gen/manticore_protocol_cerberus_ResetCounter__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_ResetCounter__resp_from_wire"
path = "gen/manticore_protocol_cerberus_ResetCounter__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_cerberus_ResetCounter__resp_to_wire"
path = "gen/manticore_protocol_cerberus_ResetCounter__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetVersion__req_to_wire"
path = "gen/manticore_protocol_spdm_GetVersion__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetVersion__req_from_wire"
path = "gen/manticore_protocol_spdm_GetVersion__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetVersion__resp_from_wire"
path = "gen/manticore_protocol_spdm_GetVersion__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetVersion__resp_to_wire"
path = "gen/manticore_protocol_spdm_GetVersion__resp_to_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetCaps__req_to_wire"
path = "gen/manticore_protocol_spdm_GetCaps__req_to_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetCaps__req_from_wire"
path = "gen/manticore_protocol_spdm_GetCaps__req_from_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetCaps__resp_from_wire"
path = "gen/manticore_protocol_spdm_GetCaps__resp_from_wire.rs"

[[bin]]
name = "manticore_protocol_spdm_GetCaps__resp_to_wire"
path = "gen/manticore_protocol_spdm_GetCaps__resp_to_wire.rs"

