# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "manticore-tool"
version = "0.0.1"
edition = "2018"

authors = ["lowRISC Contributors"]
license = "Apache-2.0"
homepage = "https://opentitan.org/"
repository = "https://github.com/lowRISC/manticore"
description = "A tool for working with Manticore data formats"

[dependencies]
manticore = { path = ".." }

serde = "1.0"
serde_json = "1.0"
structopt = "0.3.16"
